--- a/frontend/lib/visbol.module.css
+++ b/frontend/lib/visbol.module.css
@@ -1,6 +1,7 @@
 .visbolreact {
    box-sizing: content-box;
    box-sizing: content-box;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .rendering {
@@ -10,38 +11,62 @@
 }
 
 .viewport {
-   border: 3px solid black;
+   border: 2px solid #092327;
    border-radius: 10px;
+   box-sizing: content-box;
+}
+
+.sizeadjustment {
+   margin-right: 1rem;
+   display: flex;
+   height: 100%;
+   justify-content: center;
+   flex-direction: column;
+   box-sizing: content-box;
+}
+
+.instruction {
+   margin: 3px 0 0 3px;
+   font-size: 0.8rem;
    box-sizing: content-box;
 }
 
 .navigator {
    height: 50px;
-   background-color: rgb(212, 233, 252);
+   background-color: #BCE7FD;
    font-family: 'Roboto',sans-serif;
-   color: rgb(77, 77, 77);
+   color: #000;
    box-sizing: content-box;
+   display: flex;
+   justify-content: space-between;
+   border-radius: 0.5rem;
+   margin-bottom: 0.2rem;
 }
 
-.navigatortitle {
-   margin: 0;
-   padding-top: 12px;
-   padding-left: 10px;
-   width: 200px !important;
-   font-size: 20px;
-   display: inline-block;
-   color: rgb(54, 54, 54);
-   box-sizing: content-box;
+.controlcontainer {
+   margin-right: 1rem;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
-.sizeadjustment {
-   float: right;
-   margin: 0 10px 0 0;
-   box-sizing: content-box;
+.truncatelabelscontainer {
+   align-items: center;
+   height: 100%;
+   display: flex;
 }
 
-.instruction {
-   margin: 10px 0 3px 3px;
-   font-size: 14px;
-   box-sizing: content-box;
+.labelinstruction {
+   font-size: 0.8rem;
+   margin-left: 1px;
+}
+
+.titlecontainer {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   height: 100%;
+   font-size: 1.1rem;
+   margin-left: 1rem;
+   color: #8C271E;
 }
